refactor: update import paths to use absolute imports and clean up code structure

--- a/content/home/hero.mdx
+++ b/content/home/hero.mdx
@@ -1,12 +1,15 @@
----
-slides:
-  - heading1: "Innovative, Ambitious, and"
-    heading2: "Efficient"
-    subheading: "Expert Mortgage Solutions, From First Homes to £150M Commercial Projects"
-buttonText: "learn more"
-buttonLink: "/services"
-backgroundVideo: "/images/hero/hero-main.mp4"
----
+export const slides = [
+  {
+    heading1: "Innovative, Ambitious, and",
+    heading2: "Efficient",
+    subheading:
+      "Expert Mortgage Solutions, From First Homes to £150M Commercial Projects",
+  },
+];
+
+export const buttonText = "learn more";
+export const buttonLink = "/services";
+export const backgroundVideo = "/images/hero/hero-main.mp4";
 
 <div className="z-50 overflow-hidden pt-5">
   <Slider>
