refactor: update button text for service exploration and enhance aria labels for accessibility

--- a/content/home/hero.mdx
+++ b/content/home/hero.mdx
@@ -7,7 +7,7 @@ export const slides = [
   },
 ];
 
-export const buttonText = "learn more";
+export const buttonText = "Explore Mortgage Services";
 export const buttonLink = "/services";
 export const backgroundVideo = "/images/hero/hero-main.mp4";
 
